Add build artifacts and certificates to .gitignore
- Ignore .NET obj/ and bin/Debug|Release directories
- Ignore Node.js node_modules and package-lock.json
- Ignore certificate files (PFX, PEM, KEY, CRT) for security
- Keep README.md files in certs directories for documentation

This prevents build artifacts and sensitive certificates from being
committed to the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@ ant-javacard.jar
 build
 SmartPGPApplet.cap
 **/__pycache__/
+
+# .NET build artifacts
+**/obj/
+**/bin/Debug/
+**/bin/Release/
+
+# Node.js
+**/node_modules/
+**/package-lock.json
+
+# Certificates (dev only, not for production)
+**/certs/*.pfx
+**/certs/*.pem
+**/certs/*.key
+**/certs/*.crt
+!**/certs/README.md
