--- a/android_app/AEPGPEncryptor/app/build.gradle
+++ b/android_app/AEPGPEncryptor/app/build.gradle
@@ -9,10 +9,10 @@ android {
 
     defaultConfig {
         applicationId "com.aepgp.encryptor"
-        minSdk 26  // Android 8.0 (Oreo)
+        minSdk 21  // Android 5.0 (Lollipop) - NFC HCE support
         targetSdk 34
         versionCode 1
-        versionName "1.0.0"
+        versionName "1.0.0-nfc"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -59,8 +59,7 @@ dependencies {
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
 
-    // USB and Smart Card
-    implementation 'com.github.mik3y:usb-serial-for-android:3.7.0'
+    // NFC is built into Android - no external dependency needed
 
     // Cryptography - BouncyCastle
     implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
