--- a/android_app/AEPGPEncryptor/app/build.gradle
+++ b/android_app/AEPGPEncryptor/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.activity:activity-ktx:1.8.2'
     implementation 'androidx.fragment:fragment-ktx:1.6.2'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
 
     // Material Design
     implementation 'com.google.android.material:material:1.11.0'
