Added basic updates to implement outlook web and desktop integration. Yet to be confirmed by Claude

--- a/outlook_helper/macos/SmartPGP.OutlookHelper/.env.example
+++ b/outlook_helper/macos/SmartPGP.OutlookHelper/.env.example
@@ -4,8 +4,8 @@
 # Server port (default: 5555)
 SMARTPGP_PORT=5555
 
-# Allowed CORS origin (default: https://localhost)
-SMARTPGP_ALLOWED_ORIGIN=https://localhost
+# Allowed CORS origins (comma-separated; default includes localhost and Office 365)
+SMARTPGP_ALLOWED_ORIGINS=https://localhost,https://outlook.office.com,https://outlook.live.com
 
 # Optional: Path to TLS certificate (PEM or P12 format)
 # SMARTPGP_CERT_PATH=certs/localhost.p12
