--- a/outlook_helper/windows/SmartPGP.OutlookHelper/appsettings.json
+++ b/outlook_helper/windows/SmartPGP.OutlookHelper/appsettings.json
@@ -1,7 +1,11 @@
 {
   "SmartPgp": {
     "Port": 5555,
-    "AllowedOrigin": "https://localhost",
+    "AllowedOrigins": [
+      "https://localhost",
+      "https://outlook.office.com",
+      "https://outlook.live.com"
+    ],
     "CertificatePath": "certs/localhost.pfx",
     "CertificatePassword": "change-me",
     "SignerId": "" // optional fingerprint or email for signing; leave empty to encrypt-only
